feat: make jolt-hegel portable across Jolt, Babashka, and JVM Clojure (#6)
## Summary

- one shared Clojure-family library for Jolt, Babashka, and JVM Clojure
- canonical plain-EDN description for all 71 libhegel 0.33 bindings
- direct `jolt.ffi`, `babashka.ffi`, and `java.lang.foreign` backends
- shared property, shrinking/replay, stateful, reporting,
`clojure.test`, and optional Malli behavior
- checksum-verified native installer with host mechanics behind an
explicit boundary
- per-OS Jolt, Babashka native-image, and JVM CI matrices plus JDK 22
minimum coverage
- consumer-focused documentation preserving Kyle Kingsbury/Aphyr
`hegel-clj` attribution

## Provenance

- jolt-hegel starting SHA: `56dc892debb61ca81a457d18f7067f5db6c67e8c`
- supplied Babashka starting SHA:
`397017529b832f0584c655bbbe34058452ca9426`
- Babashka refreshed-upstream base:
`eb32e076c719d4fbd57a375182e69c607e6bc111`
- required general-purpose Babashka FFI commit:
`26367edf91905eb85c68e6fd77f3e108a60dc651`
- validated jolt-hegel head: `338c8324ce364a60e922bacf16d4775ae39a7648`

## Validation

CI run
[32806527523](https://github.com/chucklehead-dev/jolt-hegel/actions/runs/32806527523)
passes all 15 jobs:

- static checks and native-free ABI descriptor validation
- Babashka native-image/FFI tests on Linux x86_64, Windows x86_64, and
macOS arm64
- Jolt semantic and Git-dependency consumer tests on all three target
operating systems
- Babashka semantic and Git-dependency consumer tests on all three
target operating systems
- JVM Clojure/JDK 25 semantic and Git-dependency consumer tests on all
three target operating systems
- JVM minimum compatibility suite on JDK 22

Local validation also covered fresh native downloads with exact SHA-256
verification on all three Linux hosts.

## Experimental jank work

jank is deliberately separate from the three-host support claim. The
experimental direct backend is published on `codex/jank-portable` at
`f72b3e096b18d076a7e0d3825080f3e5e3c5a806`; its generated AB